update the docker ps command

--- a/docker-ps.yml
+++ b/docker-ps.yml
@@ -4,5 +4,4 @@
   become: yes
   tasks:
     - name: executing docker ps 
-      shell: docker ps
-      register: docker_ps
+      ansible.builtin.shell: docker ps
