add dockerfile write step

--- a/pocketbase.yml
+++ b/pocketbase.yml
@@ -2,12 +2,39 @@
 - name: Build and run PocketBase Docker container
   hosts: all
   tasks:
+    - name: Write Dockerfile for PocketBase
+      ansible.builtin.shell: |
+        mkdir -p /tmp/pocketbase/
+        cat << EOF > /tmp/pocketbase/Dockerfile
+        FROM alpine:latest
+
+        ARG PB_VERSION=0.22.19
+
+        RUN apk add --no-cache \
+            unzip \
+            ca-certificates
+
+        # download and unzip PocketBase
+        ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+        RUN unzip /tmp/pb.zip -d /pb/
+
+        # uncomment to copy the local pb_migrations dir into the image
+        # COPY ./pb_migrations /pb/pb_migrations
+
+        # uncomment to copy the local pb_hooks dir into the image
+        # COPY ./pb_hooks /pb/pb_hooks
+
+        # start PocketBase
+        CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
+        EOF
+
+      
     - name: Build PocketBase Docker image
       docker_image:
         name: "pocketbase-{{ pb_version }}"
         source: build
         build:
-          path: .
+          dockerfile: /tmp/pocketbase/Dockerfile
           args:
             PB_VERSION: "{{ pb_version }}"
         state: present
