--- a/pocketbase.yml
+++ b/pocketbase.yml
@@ -15,7 +15,7 @@
             ca-certificates
 
         # download and unzip PocketBase
-        ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+        ADD https://github.com/pocketbase/pocketbase/releases/download/v\\${PB_VERSION}/pocketbase_\\${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
         RUN unzip /tmp/pb.zip -d /pb/
 
         # uncomment to copy the local pb_migrations dir into the image
@@ -34,6 +34,7 @@
         name: "pocketbase-{{ pb_version }}"
         source: build
         build:
+          path: /tmp/pocketbase/
           dockerfile: /tmp/pocketbase/Dockerfile
           args:
             PB_VERSION: "{{ pb_version }}"
