--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -10,6 +10,10 @@
 
         ARG PB_VERSION=0.22.19
 
+        # Set environment variables
+        ENV ADMIN_EMAIL=
+        ENV ADMIN_PASSWORD=
+
         RUN apk add --no-cache \
             unzip \
             ca-certificates
@@ -25,7 +29,7 @@
         # COPY ./pb_hooks /pb/pb_hooks
 
         # start PocketBase
-        CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
+        CMD ["sh", "-c", "/pb/pocketbase migrate up && /pb/pocketbase admin create $ADMIN_EMAIL $ADMIN_PASSWORD && /pb/pocketbase serve --http=0.0.0.0:8080"]
         EOF
 
       
@@ -47,5 +51,8 @@
         image: "pocketbase-{{ pb_version }}:latest"
         state: started
         restart_policy: always
+        env:
+          ADMIN_EMAIL: "{{ admin_email }}"
+          ADMIN_PASSWORD: "{{ admin_password }}"
         networks:
           - name: caddy_network
