--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -1,36 +1,29 @@
 ---
 - name: Build and run PocketBase Docker container
   hosts: all
+  connection: local
   tasks:
     - name: Write Dockerfile for PocketBase
-      ansible.builtin.shell: |
-        mkdir -p /tmp/pocketbase/
-        cat << EOF > /tmp/pocketbase/Dockerfile
-        FROM alpine:latest
+      copy:
+        dest: "/tmp/pocketbase/Dockerfile"
+        content: |
+          FROM alpine:latest
 
-        ARG PB_VERSION=0.22.19
+          ARG PB_VERSION=0.22.19
 
-        # Set environment variables
-        ENV ADMIN_EMAIL=
-        ENV ADMIN_PASSWORD=
+          ENV ADMIN_EMAIL=
+          ENV ADMIN_PASS=
 
-        RUN apk add --no-cache \
-            unzip \
-            ca-certificates
+          RUN apk add --no-cache \
+              unzip \
+              ca-certificates
 
-        # download and unzip PocketBase
-        ADD https://github.com/pocketbase/pocketbase/releases/download/v0.22.19/pocketbase_0.22.19_linux_arm64.zip /tmp/pb.zip
-        RUN unzip /tmp/pb.zip -d /pb/
+          # download and unzip PocketBase
+          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+          RUN unzip /tmp/pb.zip -d /pb/
 
-        # uncomment to copy the local pb_migrations dir into the image
-        # COPY ./pb_migrations /pb/pb_migrations
-
-        # uncomment to copy the local pb_hooks dir into the image
-        # COPY ./pb_hooks /pb/pb_hooks
-
-        # start PocketBase
-        CMD ["sh", "-c", "/pb/pocketbase migrate up && /pb/pocketbase admin create $ADMIN_EMAIL $ADMIN_PASSWORD && /pb/pocketbase serve --http=0.0.0.0:8080"]
-        EOF
+          # start PocketBase
+          CMD ["sh", "-c", "/pb/pocketbase migrate up && /pb/pocketbase admin create $ADMIN_EMAIL $ADMIN_PASS && /pb/pocketbase serve --http=0.0.0.0:8090"]
 
       
     - name: Build PocketBase Docker image
@@ -53,6 +46,6 @@
         restart_policy: always
         env:
           ADMIN_EMAIL: "{{ admin_email }}"
-          ADMIN_PASSWORD: "{{ admin_password }}"
+          ADMIN_PASS: "{{ admin_password }}"
         networks:
           - name: caddy_network
