--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -18,7 +18,7 @@
               ca-certificates
 
           # download and unzip PocketBase
-          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_arm64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
 
           # start PocketBase
