--- a/caddy_server.yml
+++ b/caddy_server.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install Caddy Server
   hosts: all
+  connection: local
   tasks:
     - name: Create a Docker network
       docker_network:
