--- a/stop_pocketbase.yml
+++ b/stop_pocketbase.yml
@@ -1,6 +1,7 @@
 ---
 - name: Stop PocketBase Docker container
   hosts: all
+  connection: local
   tasks:
     - name: Stop PocketBase Docker container
       docker_container:
