--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -8,23 +8,18 @@
         dest: "/tmp/pocketbase/Dockerfile"
         content: |
           FROM alpine:latest
-
+          
           ARG PB_VERSION=0.22.19
-
-          ENV ADMIN_EMAIL=
-          ENV ADMIN_PASS=
-
-          RUN apk add --no-cache \
-              unzip \
-              ca-certificates
-
-          # download and unzip PocketBase
+          
+          RUN apk add --no-cache unzip ca-certificates
+          
           ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
 
-          # start PocketBase
-          CMD ["sh", "-c", "/pb/pocketbase migrate up && /pb/pocketbase admin create $ADMIN_EMAIL $ADMIN_PASS && /pb/pocketbase serve --http=0.0.0.0:8090"]
-
+          # the default command
+          ENV RUN_CMD="/pb/pocketbase serve --http=0.0.0.0:8090"
+          
+          CMD sh -c "$RUN_CMD"
       
     - name: Build PocketBase Docker image
       docker_image:
