--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -23,7 +23,7 @@
       
     - name: Build PocketBase Docker image
       docker_image:
-        name: "pocketbase-1-{{ pb_version }}"
+        name: "pocketbase-{{ pb_version }}"
         source: build
         build:
           path: /tmp/pocketbase/
@@ -36,7 +36,7 @@
     - name: Run PocketBase Docker container
       docker_container:
         name: "{{ instance_code }}"
-        image: "pocketbase-1-{{ pb_version }}:latest"
+        image: "pocketbase-{{ pb_version }}:latest"
         state: started
         restart_policy: always
         env:
