--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -7,3 +7,5 @@
       docker_container:
         name: "{{ instance_code }}"
         state: started
+        networks:
+          - name: caddy_network
