--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -44,4 +44,4 @@
         networks:
           - name: caddy_network
         volumes:
-          - "~/pocketbase_apps/{{ instance_code }}/pb":/pb
+          - "~/pocketbase_apps/{{ instance_code }}/pb:/pb"
