--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -49,4 +49,5 @@
         networks:
           - name: caddy_network
         volumes:
-          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb:/pb"
+          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
