--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -9,3 +9,6 @@
         state: started
         networks:
           - name: caddy_network
+        volumes:
+          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
