--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -10,5 +10,5 @@
         networks:
           - name: caddy_network
         volumes:
-          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
-          - "/home/abdelhadi/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data:/pb/pb_data"
