--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -52,5 +52,5 @@
         networks:
           - name: caddy_network
         volumes:
-          - "{{ pocketbase_apps_dir }}}/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data:/pb/pb_data"
