--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -16,7 +16,7 @@
           ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
           
-          CMD ["sh", "-c", "/pb/pocketbase migrate up && /pb/pocketbase admin create $ADMIN_EMAIL $ADMIN_PASS && /pb/pocketbase serve --http=0.0.0.0:8090"]
+          CMD ["pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
 
     - name: Ensure the app directory exists
       file:
@@ -43,9 +43,26 @@
         restart_policy: always
         networks:
           - name: caddy_network
-        env:
-          ADMIN_EMAIL: "{{ admin_email }}"
-          ADMIN_PASS: "{{ admin_password }}"
         volumes:
           - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+
+      - name: Run migrations
+        community.docker.docker_container_exec:
+          container: "{{ instance_code }}"
+            argv:
+            - /pb/pocketbase
+            - "migrate"
+            - "up"
+          register: result
+
+      - name: Create Admin Account
+        community.docker.docker_container_exec:
+          container: "{{ instance_code }}"
+            argv:
+            - /pb/pocketbase
+            - "admin"
+            - "create"
+            - "{{ admin_email }}"
+            - "{{ admin_password }}"
+          register: result
