--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -18,15 +18,12 @@
           ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_arm64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
 
-          # the default command
-          ENV RUN_CMD="/pb/pocketbase serve --http=0.0.0.0:8090"
-
           # start PocketBase
-          CMD sh -c "$RUN_CMD"
+          CMD ["pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
 
     - name: Ensure the app directory exists
       file:
-        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb"
+        path: "/pocketbase_apps/{{ instance_code }}/pb"
         state: directory
       
     - name: Build PocketBase Docker image
@@ -47,10 +44,26 @@
         image: "pocketbase-1-{{ pb_version }}:latest"
         state: started
         restart_policy: always
-        env:
-          RUN_CMD: "/pb/pocketbase migrate up && /pb/pocketbase admin create {{ admin_email }} {{ admin_password }} && /pb/pocketbase serve --http=0.0.0.0:8090"
         networks:
           - name: caddy_network
         volumes:
-          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations:/pb/migrations"
-          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+
+    - name: Run Pocketbase Migrations
+      community.docker.docker_container_exec:
+        container: "{{ instance_code }}"
+        argv:
+          - /pb/pocketbase
+          - "migrate"
+          - "up"
+
+    - name: Create Admin Account
+      community.docker.docker_container_exec:
+        container: "{{ instance_code }}"
+        argv:
+          - /pb/pocketbase
+          - "admin"
+          - "create"
+          - "{{ admin_email }}"
+          - "{{ admin_password }}"
