--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -2,6 +2,7 @@
 - name: Delete PocketBase Docker container
   hosts: all
   connection: local
+  become: yes
   tasks:
     - name: Delete PocketBase Docker container
       docker_container:
