--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -8,8 +8,4 @@
       docker_container:
         name: "{{ instance_code }}"
         state: absent
-        
-    - name : Delete Related Directories 
-      file:
-        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}"
-        state: absent
+        purge: yes
