--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -4,6 +4,15 @@
   connection: local
   become: true
   tasks:
+     - name: Remove Data
+      community.docker.docker_container_exec:
+        container: "{{ instance_code }}"
+        argv:
+          - rm
+          - "-r"
+          - "/pb/pb_data"
+          - "/pb/migrations"
+        
     - name: Delete PocketBase Docker container
       docker_container:
         name: "{{ instance_code }}"
@@ -13,8 +22,5 @@
     - name: Remove associated volumes
       become: true
       file:
-        path: "{{ item }}"
+        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}
         state: absent
-      with_items:
-        - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations"
-        - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data"
