--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -12,3 +12,4 @@
         volumes:
           - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
