--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -27,6 +27,11 @@
         - pb_data
         - pb_hooks
       
+    - name: Create Hooks file
+      file:
+        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        state: touch
+   
     - name: Build PocketBase Docker image
       docker_image:
         name: "pocketbase-{{ pb_version }}"
@@ -39,10 +44,6 @@
         state: present
         force_tag: true
 
-    - name: Create Hooks file:
-      file:
-        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
-        state: touch
 
     - name: Run PocketBase Docker container
       docker_container:
