--- a/edit_hook.yml
+++ b/edit_hook.yml
@@ -2,7 +2,7 @@
   hosts: all
   connection: local
   tasks:
-    - name: Ensure the main.pb.js file exists with the correct content
-      ansible.builtin.copy:
-        dest: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
-        content: "{{ content }}"
+    - name: Saving the hook code
+      blockinfile:
+        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        block: "{{ content }}"
