--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -25,6 +25,20 @@
       file:
         path: "/pocketbase_apps/{{ instance_code }}/pb"
         state: directory
+
+    - name: Ensure the app directory exists
+      file:
+        path: "/pocketbase_apps/{{ instance_code }}/pb/{{ item }}"
+        state: directory
+      with_items:
+      - migrations
+      - pb_data
+      - pb_hooks
+
+    - name: Create hooks file
+      file:
+        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        state: touch
       
     - name: Build PocketBase Docker image
       docker_image:
@@ -49,6 +63,7 @@
         volumes:
           - "/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
 
     - name: Run Pocketbase Migrations
       community.docker.docker_container_exec:
