--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -2,6 +2,24 @@
 - name: Build and run PocketBase Docker container
   hosts: all
   tasks:
+    - name: Ensure Directories Exists
+      file:
+        path: "{{ item }}"
+        state: directory
+      loop:
+        - "/tmp/pocketbase"
+        - "/pocketbase_apps"
+        - "/pocketbase_apps/{{ instance_code }}"
+        - "/pocketbase_apps/{{ instance_code }}/pb"
+        - "/pocketbase_apps/{{ instance_code }}/pb/migrations"
+        - "/pocketbase_apps/{{ instance_code }}/pb/pb_data"
+        - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks"
+
+    - name: Create hooks file
+      file:
+        path: "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        state: touch
+        
     - name: Write Dockerfile for PocketBase
       copy:
         dest: "/tmp/pocketbase/Dockerfile"
@@ -21,25 +39,6 @@
           # start PocketBase
           CMD ["pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
 
-    - name: Ensure the app directory exists
-      file:
-        path: "/pocketbase_apps/{{ instance_code }}/pb"
-        state: directory
-
-    - name: Ensure the app directory exists
-      file:
-        path: "/pocketbase_apps/{{ instance_code }}/pb/{{ item }}"
-        state: directory
-      with_items:
-      - migrations
-      - pb_data
-      - pb_hooks
-
-    - name: Create hooks file
-      file:
-        path: "{{ pocketbase_apps_dir }}/{{ instance_code }}/pb/pb_hooks/main.pb.js"
-        state: touch
-      
     - name: Build PocketBase Docker image
       docker_image:
         name: "pocketbase-003-{{ pb_version }}"
