--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -2,6 +2,7 @@
 - name: Build and run PocketBase Docker container
   hosts: all
   connection: local
+  become: yes
   tasks:
     - name: Ensure Directories Exists
       file:
