--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -42,7 +42,7 @@
 
     - name: Build PocketBase Docker image
       docker_image:
-        name: "pocketbase-003-{{ pb_version }}"
+        name: "pocketbase-{{ pb_version }}"
         source: build
         build:
           path: /tmp/pocketbase/
@@ -55,7 +55,7 @@
     - name: Run PocketBase Docker container
       docker_container:
         name: "{{ instance_code }}"
-        image: "pocketbase-1-{{ pb_version }}:latest"
+        image: "pocketbase-{{ pb_version }}:latest"
         state: started
         restart_policy: always
         networks:
