--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -9,3 +9,8 @@
       docker_container:
         name: "{{ instance_code }}"
         state: absent
+
+    - name: Remove app dir:
+      file:
+        path: "/pocketbase_apps/{{ instance_code }}"
+        state: absent
