--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -41,7 +41,7 @@
 
     - name: Build PocketBase Docker image
       docker_image:
-        name: "pocketbase-{{ pb_version }}"
+        name: "pocketbase-003-{{ pb_version }}"
         source: build
         build:
           path: /tmp/pocketbase/
