--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -35,10 +35,8 @@
 
           RUN unzip /tmp/pb.zip -d /pb/
           
-          CMD ["pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
-
           # start PocketBase
-          CMD ["pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
+          CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
 
     - name: Build PocketBase Docker image
       docker_image:
