--- a/edit_hook.yml
+++ b/edit_hook.yml
@@ -1,6 +1,8 @@
 ---
 - name: Create or update main.pb.js in the volume directory
   hosts: all
+  become: yes
+  become_user: root
   tasks:
     - name: Saving the hook code
       ansible.builtin.copy:
