--- a/sablier_with_caddy.yml
+++ b/sablier_with_caddy.yml
@@ -54,3 +54,5 @@
           - '/var/run/docker.sock:/var/run/docker.sock'
         state: started
         restart_policy: always
+        networks:
+          - name: caddy_network
