--- a/sablier_with_caddy.yml
+++ b/sablier_with_caddy.yml
@@ -16,14 +16,15 @@
       ansible.builtin.copy:
         content: |
           http://*.deploypocket.com {
-            sablier {
-              group pocketbase_apps
-              session_duration 1m 
-              dynamic {
-                  display_name Deploypocket
+            route / {
+              sablier {
+                group pocketbase_apps
+                session_duration 1m 
+                dynamic {
+                    display_name Deploypocket
+                }
               }
             }
-            
             reverse_proxy {labels.2}:8090
           }
           
