--- a/sablier_with_caddy.yml
+++ b/sablier_with_caddy.yml
@@ -16,7 +16,7 @@
       ansible.builtin.copy:
         content: |
           http://*.deploypocket.com {
-            route / {
+            route /* {
               sablier {
                 group pocketbase_apps
                 session_duration 1m 
@@ -24,8 +24,8 @@
                     display_name Deploypocket
                 }
               }
+              reverse_proxy {labels.2}:8090
             }
-            reverse_proxy {labels.2}:8090
           }
           
         dest: /tmp/caddy/Caddyfile
