--- a/sablier_with_caddy.yml
+++ b/sablier_with_caddy.yml
@@ -40,6 +40,8 @@
           - '/var/run/docker.sock:/var/run/docker.sock'
         state: started
         restart_policy: always
+        networks:
+          - name: caddy_network
 
     - name: Deploy Caddy Proxy Service
       docker_container:
