--- a/sablier_with_caddy.yml
+++ b/sablier_with_caddy.yml
@@ -3,10 +3,11 @@
   hosts: all
   connection: local
   tasks:
-    - name: Create a Docker network
+    - name: Ensure caddy_network exists
       docker_network:
         name: caddy_network
         driver: bridge
+        state: present
 
     - name: Ensure App Directories Exist
       file:
